# CICI-Chat

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  picmind.code-workspace  start-picmind.bat
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: images.py  live.py  recognition.py  reindex.py  settings.py  stats.py
backend/app/services/: annotation.py  batch_recognition.py  calibration.py  color_analysis.py  danger_detector.py  distance_estimator.py  flight_controller.py  indexer.py  kalman_filter.py  live_camera.py  live_pipeline.py  recognition.py  scanner.py  scene_classifier.py  yolo_label_map.py  yolo_recognizer.py  yolo_tracker.py
backend/tests/: conftest.py  test_annotation.py  test_api.py  test_batch_recognition.py  test_config.py  test_danger_detector.py  test_database.py  test_distance_estimator.py  test_gallery_source.py  test_indexer.py  test_kalman_filter.py  test_live_pipeline.py  test_recognition.py  test_recognizer_factory.py  test_scanner.py  test_scene_classifier.py  test_yolo_label_map.py  test_yolo_recognizer.py  test_yolo_tracker.py
docs/ARTICLES/: 从图片管理到无人机视觉大脑-PicMind开发全历程.md
docs/CODEMAPS/: live-preview-verification.md  yolo-gpu-migration.md  yolo-integration-verification.md
docs/superpowers/plans/: 2026-05-23-picmind-phase-1.md  2026-05-26-picmind-phase-2.md  (+9 more)
esp32/drone_stabilizer/: drone_stabilizer.ino
esp32/vision_stabilizer/: vision_stabilizer.ino
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
(+22 files in other folders)
