[project]
name = "picmind-backend"
version = "0.1.0"
description = "Local intelligent image management backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.4.0",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.3,<9.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
